--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
   "name": "svelte-heroicons",
+  "description": "Svelte wrappers for the Heroicons library.",
+  "keywords": [
+    "svelte",
+    "svelte3",
+    "sveltejs",
+    "heroicons",
+    "icons"
+  ],
+  "author": "Ryan Gossiaux <ryan.gossiaux@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rgossiaux/svelte-heroicons/issues"
+  },
+  "homepage": "https://github.com/rgossiaux/svelte-heroicons",
+  "repository": "github:rgossiaux/svelte-heroicons",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
+    "prepackage": "node build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+  },
+  "peerDependencies": {
+    "svelte": "^3.44.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
